--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Degenerity</title>
+
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="favicon-128x128.png">
+    <meta property="og:site_name" content="Degenerify">
+    <meta property="og:description" content="Turn website into it's degenerate form.">
+    <meta property="og:title" content="Degenerify">
+
+    <title>Degenerify</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <style>
         * {
@@ -20,8 +27,8 @@
 <body>
     <form>
         <div class="form-example">
-            <label for="name" >Enter url to degenerity: </label>
-            <input id="inputUrl" size="50" type="text" name="url"required>
+            <label for="name">Enter url to degenerify: </label>
+            <input id="inputUrl" size="50" type="text" name="url" required>
             <input id="submitBtn" type="submit" value="Go!">
         </div>
     </form>
