--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <meta property="og:type" content="website">
-    <meta property="og:image" content="favicon-128x128.png">
     <meta property="og:site_name" content="Degenerify">
     <meta property="og:description" content="Turn website into it's degenerate form.">
     <meta property="og:title" content="Degenerify">
+    <meta property="og:image" content="https://cerlancism-degenerify.glitch.me/favicon-128x128.png">
 
     <title>Degenerify</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
