--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <body>
     <form>
         <div class="form-example">
-            <label for="name" >Enter url to degenerity: </label>
+            <label for="name" >Enter url to degenerify: </label>
             <input id="inputUrl" size="50" type="text" name="url"required>
             <input id="submitBtn" type="submit" value="Go!">
         </div>
